# rustcraft

./: .gitignore  Cargo.toml  config.toml  deny.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: camera.rs  chunk.rs  event_handler.rs  frame_handler.rs  key_handler.rs  lib.rs  particles.rs  renderer.rs  settings.rs  world.rs
common/block/: Cargo.toml
common/block/src/: lib.rs
common/chunk/: Cargo.toml
common/chunk/src/: block_entity.rs  chunk.rs  lib.rs  packed.rs  persistence.rs  raycasting.rs  store.rs  wiring.rs
common/ecs/: Cargo.toml
common/ecs/src/: ai.rs  lib.rs  movement.rs
common/entity/: Cargo.toml
common/entity/src/: lib.rs
common/model/: Cargo.toml
common/model/src/: lib.rs
common/physics/: Cargo.toml
common/physics/src/: lib.rs
common/protocol/: Cargo.toml
common/protocol/src/: entity.rs  lib.rs  particles.rs  world.rs
common/resources/: Cargo.toml
common/resources/src/: block.rs  entity.rs  lib.rs  texture.rs
common/simulation/: Cargo.toml
common/simulation/src/: particles.rs
common/spatial/: Cargo.toml
common/spatial/src/: aabb.rs  lib.rs  orientation.rs  vectors.rs
common/world/: Cargo.toml
common/world/src/: lib.rs
crates/client/src/: camera.rs  event_handler.rs  key_handler.rs  lib.rs  settings.rs  world.rs
crates/common/chunk/src/: lib.rs
crates/common/ecs/src/: lib.rs  movement.rs
crates/common/protocol/: Cargo.toml
crates/common/protocol/src/: lib.rs
crates/common/spatial/src/: aabb.rs  lib.rs  orientation.rs  vectors.rs
crates/render/shaders/: shader.wgsl
crates/render/src/: lib.rs  mesh.rs  render.rs  texture.rs
crates/server/src/: lib.rs
crates/server/src/world/: mod.rs
render/: Cargo.toml
render/shaders/: shader.wgsl  skybox.wgsl
render/src/: block.rs  builder.rs  camera.rs  debug.rs  debug_overlay.rs  lib.rs  lighting.rs  math.rs  mesher.rs  model.rs  overlay.rs  render.rs  shader.rs  texture.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/world/: mod.rs
