[workspace]
members = [
    "common/block",
    "common/chunk",
    "common/ecs",
    "common/model",
    "common/protocol",
    "common/spatial",
    "client",
    "render",
    "server",
]
resolver = "3"

[profile.release]
codegen-units = 1
debug = "line-tables-only"
lto = true
strip = "debuginfo"

[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
opt-level = 3
split-debuginfo = "unpacked"

[workspace.dependencies]
anyhow = "1.0"
bevy_ecs = { version = "0.19", default-features = false, features = ["std"] }
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = { version = "0.34", default-features = false, features = [
    "wayland",
    "x11",
] }
bincode = { version = "2.0", features = ["serde"] }
bytemuck = "1.25"
image = "0.25"
noise = "0.9"
ordered-float = "5.3"
pollster = "0.4"
rand = "0.10"
rayon = "1.12"
redb = "4.1"
renet = "2.0"
renet_netcode = "2.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "29.0"
winit = "0.30"
zstd = { version = "0.13", default-features = false }
