[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Client code"
edition = "2024"
name = "client"
publish = false
version = "0.1.0"

[[bin]]
name = "rustcraft"
path = "src/bin/main.rs"

[[bin]]
name = "server_mode"
path = "src/bin/server_mode.rs"

[[bin]]
name = "client_mode"
path = "src/bin/client_mode.rs"

[dependencies]
chunk = { path = "../common/chunk" }
ecs = { path = "../common/ecs" }
protocol = { path = "../common/protocol" }
render = { path = "../render" }
resources = { path = "../common/resources" }
server = { path = "../server" }
simulation = { path = "../common/simulation" }
spatial = { path = "../common/spatial" }
world = { path = "../common/world" }

bevy_ecs.workspace = true
pollster.workspace = true
rand.workspace = true
renet.workspace = true
renet_netcode.workspace = true
serde.workspace = true
smallvec.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
