[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Renderer code"
edition = "2024"
name = "render"
publish = false
version = "0.1.0"

[dependencies]
block = { path = "../common/block" }
world = { path = "../common/world" }

anyhow.workspace = true
bytemuck.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
image.workspace = true
pollster.workspace = true
serde.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
