[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Server code"
edition = "2024"
name = "server"
publish = false
version = "0.1.0"

[dependencies]
block = { path = "../common/block" }
chunk = { path = "../common/chunk" }
ecs = { path = "../common/ecs" }
entity = { path = "../common/entity" }
model = { path = "../common/model" }
protocol = { path = "../common/protocol" }
spatial = { path = "../common/spatial" }
world = { path = "../common/world" }

anyhow.workspace = true
bevy_ecs.workspace = true
noise.workspace = true
renet.workspace = true
renet_netcode.workspace = true
serde.workspace = true
tracing.workspace = true
