[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Chunk code"
edition = "2024"
name = "chunk"
publish = false
version = "0.1.0"

[dependencies]
resources = { path = "../resources" }
spatial = { path = "../spatial" }

anyhow.workspace = true
bincode.workspace = true
serde.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
zstd.workspace = true
