[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "ECS code"
edition = "2024"
name = "ecs"
publish = false
version = "0.1.0"

[dependencies]
chunk = { path = "../chunk" }
resources = { path = "../resources" }
render = { path = "../../render" }
spatial = { path = "../spatial" }

bevy_ecs.workspace = true
ordered-float.workspace = true
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true
