[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Protocol code"
edition = "2024"
name = "protocol"
publish = false
version = "0.1.0"

[dependencies]
block = { path = "../block" }
chunk = { path = "../chunk" }
ecs = { path = "../ecs" }
physics = { path = "../physics" }
spatial = { path = "../spatial" }
world = { path = "../world" }

anyhow.workspace = true
bincode.workspace = true
serde.workspace = true
zstd.workspace = true
