[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Protocol code"
edition = "2024"
name = "protocol"
publish = false
version = "0.1.0"

[dependencies]
chunk = { path = "../chunk" }
ecs = { path = "../ecs" }
resources = { path = "../resources" }
spatial = { path = "../spatial" }
world = { path = "../world" }

anyhow.workspace = true
bincode.workspace = true
renet.workspace = true
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true
zstd.workspace = true
