[package]
authors = ["Jordan Sicherman <jordan.sicherman@gmail.com>"]
description = "Simulation code"
edition = "2024"
name = "simulation"
publish = false
version = "0.1.0"

[dependencies]
chunk = { path = "../chunk" }
protocol = { path = "../protocol" }
spatial = { path = "../spatial" }

serde.workspace = true
smallvec.workspace = true
